--- a/.github/workflows/read.yaml
+++ b/.github/workflows/read.yaml
@@ -14,9 +14,7 @@ jobs:
           token: ${{ secrets.VAULT_TOKEN }}
           secrets: |
             kv/data/user_details user_id | USER_ID ;
-  show:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Output Info
+      - name: List Value
         run: |
-          echo "USER ID: $USER_ID"
+         USER_ID = "${{ env.USER_ID }}"
+         echo "User ID: $USER_ID"
