--- a/.github/workflows/read.yaml
+++ b/.github/workflows/read.yaml
@@ -2,6 +2,7 @@ name: Deployment
 on: workflow_dispatch
 env:
   VAULT_CLUSTER_URL: http://18.206.203.244:8200/
+  TEST_STRING: "5712"
 jobs:
   connect-list:
     runs-on: ubuntu-latest
@@ -16,4 +17,4 @@ jobs:
             kv/data/user_details user_id | USER_ID ;
       - name: List Value
         run: |
-         echo "User ID: $USER_ID"
+         echo "User ID: $USER_ID-$TEST_STRING"
