--- a/.github/workflows/write.yaml
+++ b/.github/workflows/write.yaml
@@ -23,3 +23,5 @@ jobs:
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
           sudo apt update && sudo apt install vault
           vault version
+          export VAULT_ADDR="${{ env.VAULT_CLUSTER_URL }}"
+          vault login -method=token -token="${{ secrets.VAULT_TOKEN }}"
