--- a/.github/workflows/write.yaml
+++ b/.github/workflows/write.yaml
@@ -25,4 +25,4 @@ jobs:
           vault version
           export VAULT_ADDR="${{ env.VAULT_CLUSTER_URL }}"
           echo $VAULT_CLUSTER_URL
-          vault login -method=token "${{ secrets.VAULT_TOKEN }}" -no-print
+          vault login -method=token "${{ secrets.VAULT_TOKEN }}" -no-print=true
