--- a/.github/workflows/oneone.yaml
+++ b/.github/workflows/oneone.yaml
@@ -15,7 +15,7 @@ jobs:
    steps:
      - name: echo
        run: |
-         export TOKEN=$(curl -sSL -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL")
-         echo $TOKEN>val
-         cat val
+          curl -sSL -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | \
+          jq "{ jwt: .value, role: \"$VAULT_ROLE\" }" > ./token.json
+          cat token.json
          
