--- a/.github/workflows/oneone.yaml
+++ b/.github/workflows/oneone.yaml
@@ -18,4 +18,13 @@ jobs:
           curl -sSL -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | \
           jq "{ jwt: .value, role: \"$VAULT_ROLE\" }" > ./token.json
           cat token.json
+
+          echo 'GitHub Actions Token Claims'
+          cat ./token.json | jq -r '.jwt | split(".") | .[1] | @base64d' | jq
+
+          echo 'Vault Login Response'
+          curl -sSLf -X POST -H "Content-Type: application/json" -H "X-Vault-Namespace: admin" --data @token.json http://http://54.70.152.70:8200/v1/auth/jwt/login
+
+          # Remove the token file when we're done (if we don't fail)
+          rm ./token.json
          
