--- a/.github/workflows/oneone.yaml
+++ b/.github/workflows/oneone.yaml
@@ -23,7 +23,7 @@ jobs:
           cat ./token.json | jq -r '.jwt | split(".") | .[1] | @base64d' | jq
 
           echo 'Vault Login Response'
-          curl -sSLf -X POST -H "Content-Type: application/json" -H "X-Vault-Namespace: admin" --data @token.json http://http://54.70.152.70:8200/v1/auth/jwt/login
+          curl -sSLf -X POST -H "Content-Type: application/json" -H "X-Vault-Namespace: admin" --data @token.json http://54.70.152.70:8200/v1/auth/jwt/login
 
           # Remove the token file when we're done (if we don't fail)
           rm ./token.json
