--- a/.github/workflows/oneone.yaml
+++ b/.github/workflows/oneone.yaml
@@ -16,7 +16,7 @@ jobs:
      - name: echo
        run: |
           curl -sSL -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | \
-          jq "{ jwt: .value, role: "github-actions-role" }" > ./token.json
+          jq "{ jwt: .value, role: \"github-actions-role\" }" > ./token.json
           cat token.json
 
           echo 'GitHub Actions Token Claims'
